[gd_scene load_steps=13 format=3 uid="uid://bmtsi6bt6xph0"]

[ext_resource type="Script" path="res://scenes/characters/eagle.gd" id="1_yxrnx"]
[ext_resource type="Texture2D" uid="uid://d4hjjykwqqp5m" path="res://assets/sprites/eagle.png" id="2_gbr5a"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2tun6"]
size = Vector2(18, 20)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8yjgr"]
size = Vector2(18, 10)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_n15x0"]
size = Vector2(22, 12)

[sub_resource type="CircleShape2D" id="CircleShape2D_etl6r"]
radius = 50.0

[sub_resource type="CircleShape2D" id="CircleShape2D_x567x"]
radius = 100.0

[sub_resource type="Animation" id="Animation_yijdw"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_5ioy2"]
resource_name = "damaged"
length = 0.001
loop_mode = 1
step = 0.15
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [3]
}

[sub_resource type="Animation" id="Animation_ho6i4"]
resource_name = "idle"
length = 0.001
step = 0.15
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_cy7qk"]
resource_name = "run"
length = 0.4
loop_mode = 1
step = 0.15
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [1, 2]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_k2v2e"]
_data = {
"RESET": SubResource("Animation_yijdw"),
"hurt": SubResource("Animation_5ioy2"),
"idle": SubResource("Animation_ho6i4"),
"run": SubResource("Animation_cy7qk")
}

[node name="Eagle" type="CharacterBody2D"]
collision_layer = 4
collision_mask = 0
script = ExtResource("1_yxrnx")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, -12)
texture = ExtResource("2_gbr5a")
hframes = 4

[node name="HurtBoxCollisionShape" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(0, -10)
shape = SubResource("RectangleShape2D_2tun6")

[node name="HelmetHurtBox" type="Area2D" parent="."]
visible = false
collision_layer = 2048
collision_mask = 0

[node name="HelmetHurtBoxCollisionShape" type="CollisionShape2D" parent="HelmetHurtBox"]
position = Vector2(0, -5)
shape = SubResource("RectangleShape2D_8yjgr")

[node name="HitBox" type="Area2D" parent="."]
visible = false
collision_layer = 0
collision_mask = 2

[node name="HitBoxCollisionShape" type="CollisionShape2D" parent="HitBox"]
position = Vector2(0, -10)
shape = SubResource("RectangleShape2D_n15x0")

[node name="NotificationArea" type="Area2D" parent="."]
visible = false
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="NotificationArea"]
position = Vector2(0, -10)
shape = SubResource("CircleShape2D_etl6r")

[node name="ChaseArea" type="Area2D" parent="."]
visible = false
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="ChaseArea"]
position = Vector2(0, -10)
shape = SubResource("CircleShape2D_x567x")

[node name="SpeedChangeTimer" type="Timer" parent="."]
one_shot = true

[node name="DistanceChangeTimer" type="Timer" parent="."]
wait_time = 0.75
one_shot = true

[node name="WaitTimer" type="Timer" parent="."]
one_shot = true

[node name="HurtFlipTimer" type="Timer" parent="."]
wait_time = 0.3
one_shot = true

[node name="OffscreenTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_k2v2e")
}
autoplay = "idle"

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(0, -12)
rect = Rect2(-12, -12, 24, 24)

[node name="VisibleOnScreenEnabler2D" type="VisibleOnScreenEnabler2D" parent="."]
position = Vector2(0, -12)
rect = Rect2(-24, -24, 48, 48)

[connection signal="body_entered" from="HitBox" to="." method="_on_hit_box_body_entered"]
[connection signal="timeout" from="SpeedChangeTimer" to="." method="_on_speed_change_timer_timeout"]
[connection signal="timeout" from="DistanceChangeTimer" to="." method="_on_distance_change_timer_timeout"]
[connection signal="timeout" from="HurtFlipTimer" to="." method="_on_hurt_flip_timer_timeout"]
[connection signal="timeout" from="OffscreenTimer" to="." method="_on_offscreen_y_timer_timeout"]
[connection signal="screen_entered" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
